--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:h2:C:/Users/lkhranovska/IdeaProjects/peopledb-web
+spring.datasource.url=jdbc:h2:C:/Users/Lily/IdeaProjects/peopledb-web
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=-1
